--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -7,6 +7,10 @@ framework:
         strict_requirements: true
     profiler: { only_exceptions: false }
 
+# Twig Configuration
+twig:
+    cache: false
+
 web_profiler:
     toolbar: true
     intercept_redirects: false
