--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,8 +20,7 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        handler_id: session.handler.pdo
     fragments:       ~
     http_method_override: true
 
